# PolygonsProcessing

./: readme.txt
data/: cupsHole2.stl
include/: CGAL_to_VTKConfigure.h  PolygonsCheck.h  PolygonsProcess.h  PolygonsRepair.h
src/: CGAL_to_VTK.h  CMakeLists.txt  PolygonsConnectedComponents.cpp  PolygonsFillHole.cpp  PolygonsRefineFair.cpp  PolygonsSelfIntersection.cpp  PolygonsSoup.cpp  PolygonsStitchBorders.cpp
src/Testing/: CMakeLists.txt  CMakeLists.txt.bak  TestFillHole.cpp  TestStitchBorders.cpp  testSlopeMode.py  vtkIOTests.cpp  vtkIOTests.h
